@@ -2,7 +2,7 @@
    +----------------------------------------------------------------------+
    | eAccelerator project                                                 |
    +----------------------------------------------------------------------+
-   | Copyright (c) 2004 - 2007 eAccelerator                               |
+   | Copyright (c) 2004 - 2010 eAccelerator                               |
    | http://eaccelerator.net                                              |
    +----------------------------------------------------------------------+
    | This program is free software; you can redistribute it and/or        |
@@ -2196,7 +2196,7 @@ ZEND_DLEXPORT zend_extension zend_extension_entry = {
   EACCELERATOR_VERSION,
   "eAccelerator",
   "http://eaccelerator.net",
-  "Copyright (c) 2004-2007 eAccelerator",
+  "Copyright (c) 2004-2010 eAccelerator",
   eaccelerator_zend_startup,
   NULL,
   NULL,   /* void (*activate)() */
@@ -2225,7 +2225,7 @@ static zend_extension eaccelerator_extension_entry = {
   EACCELERATOR_VERSION,
   "eAccelerator",
   "http://eaccelerator.net",
-  "Copyright (c) 2004-2007 eAccelerator",
+  "Copyright (c) 2004-2010 eAccelerator",
   eaccelerator_zend_startup,
   NULL,
   NULL,   /* void (*activate)() */
